get subject relationship api working
